# webmaigc-ng

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
apps/admin/: README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  tests.rs
apps/data/: fifa-news.jsonl
crates/core/: Cargo.toml
crates/core/src/: lib.rs  module.rs
crates/core/src/crawler/: mod.rs  project.rs  validation.rs
crates/core/src/dedup/: duplicate_remover.rs  memory.rs  mod.rs
crates/core/src/downloader/: downloader.rs  mod.rs  tests.rs
crates/core/src/pipeline/: json_file.rs  json_lines.rs  mod.rs  pipeline.rs  tests.rs
crates/core/src/processor/: html_link.rs  mod.rs  page_processor.rs  script_data.rs  smart.rs  tests.rs
crates/core/src/queue/: memory.rs  mod.rs  request_queue.rs
crates/core/src/request/: mod.rs  page.rs  request.rs  result.rs
crates/core/src/scheduler/: default.rs  mod.rs  scheduler.rs
crates/core/src/spider/: builder.rs  engine.rs  error.rs  mod.rs  tests.rs  types.rs
crates/core/tests/: real_fetch.rs  spider_run.rs
docs/: cli-quick-start.md  core-module-design.md  repo-conventions.md
openspec/changes/archive/build-dual-mode-crawler-platform/: design.md  proposal.md  tasks.md
openspec/changes/archive/define-crawler-project-model/: design.md  proposal.md  tasks.md
openspec/changes/archive/define-rust-webmagic-architecture/: tasks.md
openspec/changes/define-rust-webmagic-architecture/: design.md  proposal.md  tasks.md
openspec/changes/define-rust-webmagic-architecture/specs/core-module/: spec.md
openspec/changes/define-rust-webmagic-architecture/specs/crawler-compliance/: spec.md
openspec/changes/define-rust-webmagic-architecture/specs/dual-mode-deployment/: spec.md
openspec/changes/define-rust-webmagic-architecture/specs/event-driven-engine/: spec.md
openspec/specs/core-module/: spec.md
services/server/: Cargo.toml
services/server/src/: main.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
(+9 files in other folders)
