[workspace]
members = [
    "apps/cli",
    "crates/core",
    "services/server",
    "services/worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-channel = "2"
dashmap = "6"
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "hickory-dns", "json", "rustls-tls"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
