[package]
name = "webmagic-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-channel.workspace = true
dashmap.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
